<resources>
    <string name="app_name">LoanApplication</string>

    <string name="home">Home</string>

    <string name="login_screen_login_button">Login</string>
    <string name="login_screen_register_button">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="loan_item_initial_amt_label_text">Initial Amt</string>
    <string name="loan_item_current_amt_label_text">Current Amt</string>
    <string name="login_screen_welcome_text">Welcome to our Loan Application, please Login or Register Below</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="loan_name_hint">Loan Name (ex. MyLoan)</string>
    <string name="loan_current_amount">Current Amount (ex. $12,000)</string>
    <string name="loan_initial_amount">Initial Amount (ex. $13,000)</string>
    <string name="loan_create_button">Create</string>
    <string name="loan_payment_terms">Total Terms Length (ex. 12)</string>
    <string name="loan_payment_terms_type_header">Terms Type (ex. Months)</string>
    <string name="loan_payment_general_information_header">General Information</string>
    <string name="loan_payment_general_information_term_conditions">Term Conditions</string>
    <string name="loan_payment_amount">Payment per Term Length (ex. $341)</string>
    <string name="loan_interest_rate">Interest Rate (6.3%)</string>
    <string name="loan_payment_start_date">Payment Start Date (MM/DD/YYYY)</string>
    <string name="loan_create_header">Create New Loan</string>
    <string name="home_text_label">Current Owned Amount -</string>
    <string-array name="loan_payment_terms_type_array">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
</resources>
