<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_background"
                android:orientation="vertical">

    <TextView
        android:id="@+id/login_screen_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/login_screen_margin_bottom"
        android:layout_marginRight="@dimen/login_screen_margin_right_left"
        android:gravity="center"
        android:text="@string/login_screen_welcome_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_message_text_size"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_screen_message"
        android:layout_centerHorizontal="true"
        >

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/login_screen_login_button"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/login_screen_register_button"/>

    </LinearLayout>

</RelativeLayout>